# VAJRA

./: Makefile  README.md
binary/: Readme.txt  libboost_system.so.1.68.0
src/: CMakeLists.txt  main.cpp
src/aggregation/: aggr_llvm_diff.cpp  aggr_llvm_diff.h  aggregate.h  aggregation.cpp  array_ssa.cpp  array_ssa.h
src/aggregation/tmp/: aggr_glue.cpp  ssa_tmp_code  vemap_populator.cpp  vemap_populator.h
src/bmc/: array_model.cpp  array_model.h  bmc.cpp  bmc.h  bmc_aggr_pass.cpp  bmc_ds.cpp  bmc_ds.h  bmc_fun_pass.cpp  bmc_fun_pass.h  bmc_fun_pre_comp_pass.cpp  bmc_fun_pre_comp_pass.h  bmc_llvm_aggr.cpp  bmc_llvm_aggr.h  bmc_loop_pass.cpp  bmc_loop_pass.h  bmc_pass.cpp  bmc_pass.h  bmc_utils.cpp  bmc_utils.h  glb_model.cpp  glb_model.h  witness.cpp  witness.h
src/daikon-inst/: build_name_map.cpp  build_name_map.h  cinput.cpp  cinput.h  collect_fun_blocks.cpp  collect_fun_blocks.h  collect_loopdata.cpp  collect_loopdata.h  comments.cpp  comments.h  insert_main.cpp  insert_main.h  loopdata.cpp  loopdata.h  segment.h  slicedpost_check.cpp  slicedpost_check.h  transform.cpp  transform.h
src/inv2smt/: inv2smt.l  inv2smt.y  makefile
src/irtoz3expr/: irtoz3expr.cpp  irtoz3expr.h  irtoz3expr_index.cpp  irtoz3expr_index.h  irtoz3expr_ranges.cpp  irtoz3expr_ranges.h
src/utils/: graphUtils.h  llvmUtils.cpp  llvmUtils.h  options.cpp  options.h  utils.h  z3Utils.cpp  z3Utils.h
tacas2020-benchmarks-all/: brs1.c  brs1f.c  brs2.c  brs2f.c  brs3.c  brs3f.c  brs4.c  brs4f.c  brs5.c  brs5f.c  condaf.c  condg.c  condgf.c  condm.c  condmf.c  condn.c  condnf.c  eqn1.c  eqn1f.c  eqn2.c  eqn2f.c  eqn3.c  eqn3f.c  eqn4.c  eqn4f.c  eqn5.c  eqn5f.c  ifcomp.c  ifcompf.c  ifeqn1.c  ifeqn1f.c  ifeqn2.c  ifeqn2f.c  ifeqn3.c  ifeqn3f.c  ifeqn4.c  ifeqn4f.c  ifeqn5.c  ifeqn5f.c  ifncomp.c  (+97 more)
tacas2020-benchmarks/booster/: booster.conf  compare.c  conda.c  condg.c  condm.c  condn.c  copy9.c  eqn2.c  eqn3.c  eqn4.c  eqn5.c  max.c  min.c  modn.c  modp.c  mods.c  ncomp.c  pcomp.c  res1.c  res1o.c  res2.c  res2o.c  run_booster.sh  sina1.c  sina2.c  sina3.c  sina4.c  sina5.c  sqm.c  ss1.c  ss2.c  ss3.c  ss4.c  ssina.c  zero_sum1.c  zero_sum2.c  zero_sum3.c  zero_sum4.c  zero_sum5.c  zero_sum_m2.c  (+4 more)
tacas2020-benchmarks/freqhorn/: conda.smt2  condg.smt2  condm.smt2  condn.smt2  eqnm2.smt2  eqnm3.smt2  eqnm4.smt2  eqnm5.smt2  modn.smt2  modp.smt2  mods.smt2  ncomp.smt2  pcomp.smt2  res1.smt2  res1o.smt2  res2.smt2  res2o.smt2  run_freqhorn.sh  sina1.smt2  sina2.smt2  sina3.smt2  sina4.smt2  sina5.smt2  sqm.smt2  ss1.smt2  ss2.smt2  ss3.smt2  ss4.smt2  ssina.smt2  zero_sum1.smt2  zero_sum2.smt2  zero_sum3.smt2  zero_sum4.smt2  zero_sum5.smt2  zero_sum_m2.smt2  zero_sum_m3.smt2  zero_sum_m4.smt2  zero_sum_m5.smt2  zero_sum_m6.smt2
tacas2020-benchmarks/vajra/: conda.c  condg.c  condm.c  condn.c  eqn2.c  eqn3.c  eqn5.c  modn.c  modp.c  mods.c  ncomp.c  pcomp.c  res1.c  res1o.c  res2.c  res2o.c  run_vajra.sh  sina1.c  sina2.c  sina3.c  sina4.c  sina5.c  ss1.c  ss2.c  ss3.c  ss4.c  ssina.c  zero_sum1.c  zero_sum2.c  zero_sum3.c  zero_sum4.c  zero_sum5.c  zero_sum_m2.c  zero_sum_m3.c  zero_sum_m4.c  zero_sum_m5.c  zero_sum_m6.c
tacas2020-benchmarks/vaphor/: compare.java  conda.java  condg.java  condm.java  condn.java  copy9.java  eqnm2.java  eqnm3.java  eqnm4.java  eqnm5.java  max.java  min.java  modn.java  modp.java  mods.java  ncomp.java  pcomp.java  res1.java  res1o.java  res2.java  res2o.java  run_vaphor.sh  sina1.java  sina2.java  sina3.java  sina4.java  sina5.java  sqm.java  ss1.java  ss2.java  ss3.java  ssina.java  zero_sum1.java  zero_sum2.java  zero_sum3.java  zero_sum4.java  zero_sum5.java  zero_sum_m2.java  zero_sum_m3.java  zero_sum_m4.java  (+2 more)
tacas2020-benchmarks/vaphor/smtformulas/: compare.smt2  compare_noarr.smt2  conda.smt2  conda_noarr.smt2  condg.smt2  condg_noarr.smt2  condm.smt2  condm_noarr.smt2  (+74 more)
tacas2020-benchmarks/veriabs/: conda.c  condg.c  modn.c  mods.c  res2o.c  run_veriabs.sh  sina1.c  sina2.c  sina4.c  ss1.c  ss3.c  ss4.c  zero_sum1.c  zero_sum3.c  zero_sum5.c  zero_sum_m2.c  zero_sum_m4.c  zero_sum_m5.c
tacas2020-benchmarks/viap/: eqn4.c  modp.c  res1.c  res1o.c  res2.c  run_viap.sh  sina3.c  sina5.c  sqm.c  ss2.c  ssina.c  zero_sum2.c  zero_sum4.c  zero_sum_m3.c  zero_sum_m6.c
